--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Manage your classroom online easliy ",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon backend/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sumantpathak",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.10.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14"
   }
 }
