--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@material-tailwind/react": "0.3.4",
     "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
