--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@material-tailwind/react": "0.3.4",
     "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.15.0",
