--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-auth-library": "^7.10.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.14"
   }
 }
