--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,9 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39"
   },
   "scripts": {
     "start": "craco start",
@@ -53,8 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39"
-  }
+  "devDependencies": {}
 }
