--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Manage your classroom online easliy ",
   "main": "index.js",
   "scripts": {
+    "start": "node backend/server",
+    "client": "npm start --prefix client",
     "server": "nodemon backend/server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
