--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://127.0.0.1:8080",
   "dependencies": {
     "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.5.0",
