--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@material-tailwind/react": "0.3.4",
+    "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.0.6",
+    "@mui/styles": "^5.1.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
     "downloadjs": "^1.4.7",
+    "postcss": "^7.0.39",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -26,10 +30,8 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
@@ -54,6 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
