--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "sumantpathak",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1032.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
