--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "socket.io": "^4.4.0"
   }
 }
