--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@material-tailwind/react": "0.3.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.1.1",
     "@testing-library/jest-dom": "^5.15.0",
@@ -30,7 +32,9 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.4.0",
+    "styled-components": "^5.3.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
