--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "postcss": "^7.0.39",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
     "react-pdf": "^5.5.0",
     "react-redux": "^7.2.6",
